fix overlapping bookmarks
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@11372 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -564,8 +564,7 @@
 			background: #f8f8f8;
 			padding: 10px;
 			margin: -11px 0 0 -11px;
-			min-width: 270px;
-			max-width: 600px;
+			min-width: 280px;
 			max-heigt: 400px;
 			z-index: 999;
 
